[package]
name = "rust_spotify"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rspotify = { version = "0.12.0", features = ["cli"] }
tokio = { version = "1.35.1", features = ["full"] }
futures = "0.3"
chrono = "*"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
async-recursion = "1"

[features]
cache_new_results = []
use_cached_results = []